--- a/javascript-practice/src/styles/style.css
+++ b/javascript-practice/src/styles/style.css
@@ -551,7 +551,7 @@ input[type='radio'] {
 .edit-task-button,
 .edit-controls .mark-completed,
 .delete-button {
-  width: 30%;
+  width: 20rem;
 }
 
 .edit-controls {
@@ -582,7 +582,8 @@ input[type='radio'] {
   overflow-y: auto;
 }
 .overlay.toggle {
-  width: calc(100% - 24rem);
+  /* width: calc(100% - 24rem); */
+  width: 100%;
 }
 .overlay.hide {
   display: none;
